# TOUR-Championship-Strokes-Gained-Analysis

./: .gitattributes  .gitignore  CITATION  CITATION.txt  CODE_OF_CONDUCT.md  README.md  xSG.ipynb
.devcontainer/: devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  internal_task.md
.github/workflows/: cml.yaml  issue.yml  issue_helper.yml  main.yml  streamlit_approach_model.yml
.streamlit/: config.toml
Applying Model/: ApproachModel.joblib.bz2  SGAnalysis.ipynb  SGCreation.ipynb  approachModel.joblib.bz2  puttingModel.joblib.bz2
Creating Model/: ApproachModel.ipynb  LazyPredict.ipynb  PuttingModel.ipynb  README.md  ideaOptunaTraining.ipynb  optimizingutils-1.2-py2.py3-none-any.whl
Creating Model/OptimizingUtils/: README.md  pyproject.toml
Creating Model/OptimizingUtils/OptimizingUtils/tunePipeline/: tunePipeline.py
Data/: FE_Strokes.csv  StrokeLevelTOURChamp.txt  event-ttc-2011.txt  hole-ttc-2011.txt  round-ttc-2011.txt  strokes.csv
Data/Hole_Mappings/: README.MD
EDA/: EDA.ipynb  FeatureEngineering.ipynb  GeoAnalysis.ipynb  README.md  SGperDrive.ipynb  SGperHole.ipynb  SGperRound.ipynb  edautils-1.2-py2.py3-none-any.whl
EDA/edaUtils/: README.md  pyproject.toml
GOLF-UTILS/: README.md  pyproject.toml
GOLF-UTILS/golfutils/: util_funcs.py
Streamlit/: config.toml  light_weight_expected_strokes.pkl  report.md  requirements.txt  streamlit_app.py  train.py
Streamlit App/: streamlit_app.py
Streamlit/.streamlit/: config.toml
Streamlit/Temp Data/: Rolling_SG_group_by_hole_player.csv  (+1 more)
(+6 files in other folders)
