[build-system]
requires = ["poetry-core>=1.00"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "OptimizingUtils"
version = "1.85"
authors = [
    "Declan Costello <dec1costello@gmail.com>"
]
description = "Optimizing tools."
packages = [
    { include = "OptimizingUtils" }
]
